fixed center alignment

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,5 +1,9 @@
 main {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    border: 1px solid black;
+    height: 100vh;
 }
